--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,6 +16,8 @@ lto = true
 panic = "abort"
 codegen-units = 1
 strip = true
+debug = true
 
 [profile.release.build-override]
 opt-level = 0
+debug = true
